<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">SMSecure</string>
	<string name="action_settings">Settings</string>
	
	<string name="addConversation">+Convo</string>
	<string name="setLocalNumber">Set Local #</string>
	<string name="settings">Settings</string>
	
	<string name="generatePad">Generate Pad</string>
	<string name="encryptText">Encrypt</string>
	<string name="decryptText">Decrypt</string>
	<string name="sendMessage">Send Message</string>
	<string name="message">Message</string>
	<string name="hub">Hub</string>
	
	<string name="readSMS">Read SMS</string>
	<string name="padManager">Pad Manager</string>
	<string name="generateOTP">Gen</string>
	<string name="shareOTP">Share</string>
	<string name="sendBT">ShareBT</string>
	<string name="receiveBT">ReceiveBT</string>
	<string name="loadOTP">Load</string>
	<string name="backToHub">Back</string>
	<string name="send">Send</string>
	<string name="generateOneTimePadButtonClick">generateOneTimePad</string>
</resources>
