<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    
    <LinearLayout
        android:id="@+id/conversationHeader"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/backToHub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backToHubButtonClick"
            android:text="@string/backToHub" />

        <Button
            android:id="@+id/generateOneTimePad"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="generateOneTimePadButtonClick"
            android:text="@string/generateOTP" />

        <Button
            android:id="@+id/shareOneTimePad"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shareOTP" />

        <Button
            android:id="@+id/loadOneTimePad"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loadOTP" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/phoneNumberHeader"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/conversationHeader">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/messagePane"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/phoneNumberHeader"
        android:layout_above="@+id/inputBar"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/inputBar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <EditText
            android:id="@+id/messageText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
        
        <Button
            android:id="@+id/sendMessage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendTextMessageButtonClick"
            android:text="@string/send" />
    </LinearLayout>

</RelativeLayout>